[package]
name = "api-rs"
version = "0.1.0"
authors = ["James Tease <james@jamestease.co.uk>"]

[dependencies]
nickel = "0.9"
rustc-serialize = "0.3"
r2d2 = "0.7"
r2d2_postgres = "0.10"
nickel_postgres = { git = "https://github.com/whostolemyhat/nickel-postgres", rev = "8fa89b4"}
uuid = { version = "0.3", features = ["v4", "rustc-serialize"] }
postgres = { version = "0.12", features = ["with-uuid"] }
