[package]
name = "api-rs"
version = "0.1.0"
authors = ["James Tease <james@jamestease.co.uk>"]

[dependencies]
nickel = "0.9"
rustc-serialize = "0.3"
r2d2 = "0.7"
r2d2_postgres = "0.11"
nickel_postgres = { git = "https://github.com/whostolemyhat/nickel-postgres", rev = "7cb8c0b"}
uuid = { version = "0.3", features = ["v4", "rustc-serialize"] }
bcrypt = "0.1"
jsonwebtoken = "1"

[dependencies.postgres]
version = "0.12"
features = ["with-uuid"]